# regulator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  flake.nix  fourmolu.yaml  regulator-bot.cabal  shell.nix  treefmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
app/: Main.hs
src/: RegulatorBot.hs
src/RegulatorBot/: Handler.hs  Parse.hs  Reply.hs  State.hs  Types.hs
